--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "typescript": "~3.6.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.13.1",
+    "@aws-cdk/aws-dynamodb": "^1.13.1",
+    "@aws-cdk/aws-lambda": "^1.13.1",
     "@aws-cdk/aws-sns": "^1.13.1",
     "@aws-cdk/aws-sns-subscriptions": "^1.13.1",
     "@aws-cdk/aws-sqs": "^1.13.1",
