--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aws-cdk-workshop",
+  "name": "cdk-workshop",
   "version": "0.1.0",
   "bin": {
-    "aws-cdk-workshop": "bin/aws-cdk-workshop.js"
+    "cdk-workshop": "bin/cdk-workshop.js"
   },
   "scripts": {
     "build": "tsc",
@@ -11,22 +11,16 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "aws-cdk": "^1.13.1",
-    "@aws-cdk/assert": "^1.6.1",
-    "@types/jest": "^24.0.18",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.6.2"
+    "@types/jest": "^29.5.1",
+    "@types/node": "20.1.7",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "aws-cdk": "2.83.1",
+    "ts-node": "^10.9.1",
+    "typescript": "~5.0.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.13.1",
-    "@aws-cdk/aws-dynamodb": "^1.13.1",
-    "@aws-cdk/aws-lambda": "^1.13.1",
-    "@aws-cdk/aws-sns": "^1.13.1",
-    "@aws-cdk/aws-sns-subscriptions": "^1.13.1",
-    "@aws-cdk/aws-sqs": "^1.13.1",
-    "@aws-cdk/core": "^1.13.1",
-    "cdk-dynamo-table-viewer": "^3.0.5"
+    "aws-cdk-lib": "2.83.1",
+    "constructs": "^10.0.0"
   }
 }
