--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cdk-workshop",
+  "name": "aws-cdk-workshop",
   "version": "0.1.0",
   "bin": {
-    "cdk-workshop": "bin/cdk-workshop.js"
+    "aws-cdk-workshop": "bin/aws-cdk-workshop.js"
   },
   "scripts": {
     "build": "tsc",
@@ -11,16 +11,16 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/node": "20.1.7",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "aws-cdk": "2.83.1",
+    "@types/jest": "^29.5.4",
+    "@types/node": "20.5.7",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
+    "aws-cdk": "2.94.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.4"
+    "typescript": "~5.2.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.83.1",
+    "aws-cdk-lib": "2.94.0",
     "constructs": "^10.0.0"
   }
 }
