--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.7",
+    "aws-cdk": "2.94.0",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.94.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.94.0",
+    "aws-sdk": "^2.1452.0",
     "constructs": "^10.0.0"
   }
 }
