--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "aws-cdk-lib": "2.94.0",
     "aws-sdk": "^2.1452.0",
+    "cdk-dynamo-table-viewer": "^0.2.486",
     "constructs": "^10.0.0"
   }
 }
